2007-03-19  Tim Retout  <tim@retout.co.uk>

	* i386/ldscript: Correct 'LINKFLAGS_gnumach' in comment.

2007-03-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* i386/i386/user_ldt.c (i386_set_gdt): Call switch_ktss() if target is
	current thread.

2007-03-05  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[bug #18349 --- ``General Protection Trap'' in `ipc_kmsg_enqueue']
	* linux/dev/glue/net.c (device_write): Call net_packet() with splimp
	held.

2007-03-04  Thomas Schwinge  <tschwinge@gnu.org>

	* tests/configfrag.ac (MBCHK): Remove check.
	* tests/test-mbchk.in: Fail correctly if `mbchk' is not available.

2007-03-01  Thomas Schwinge  <tschwinge@gnu.org>

	* linux/dev/glue/block.c (free_buffer): Use `VM_PAGE_FREE'.
	* vm/vm_object.c (vm_object_collapse, vm_object_page_remove)
	(vm_object_page_map): Likewise.

2007-02-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* linux/dev/glue/block.c (free_buffer): Fix
	vm_page_lock_queues/vm_page_unlock_queues pair.

	Fix ddb's trace command.
	* i386/i386/db_trace.c (db_find_trace_symbols): Drop _ prefix on ELF
	targets.
	(db_i386_stack_trace): Check that adresses of known functions were
	really found.

2007-02-19  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (gnumach_LINKFLAGS): New variable.
	(gnumach_LINK): Use that one instead of the previously used
	`LINKFLAGS_gnumach'.
	* i386/Makefrag.am (LINKFLAGS_gnumach): Rename to `gnumach_LINKFLAGS',
	move into [PLATFORM_at] and pass `_START'.
	* i386/ldscript: Don't hardcode a _start address of 0x100000, but make
	it configurable via `_START'.

	Add a `--enable-platform' option for future use.  Allow building
	without any Linux code.
	* Makefile.am: Don't include `linux/Makefrag.am' in there...
	* Makefrag.am: ... but rather in here.
	* configfrag.ac (MACH_MACHINE_ROUTINES): AC_DEFINE_UNQUOTED based on
	then shell variable `mach_machine_routines'.
	(--disable-default-device-drivers): Don't define in there...
	* configure.ac: ... but rather in here.