@@ -1,6 +1,6 @@
 # Makerules: how to do some things.
 
-# Copyright 2006 Free Software Foundation, Inc.
+# Copyright (C) 2006, 2007 Free Software Foundation, Inc.
 
 # Permission to use, copy, modify and distribute this software and its
 # documentation is hereby granted, provided that both the copyright
@@ -38,7 +38,7 @@ EXTRA_DIST += \
 # convenient to be able to explicitly make the intermediate files when you want
 # to deal with a problem in the MIG stub generator.
 
-# TODO.  Get rid of the following six rules and the lib_dep_tr_for_defs.a
+# TODO.  Get rid of the following four rules and the lib_dep_tr_for_defs.a
 # machinery (see Makefrag.am and i386/Makefrag.am).
 %.server.defs.c: %.srv
 	rm -f $@
@@ -46,43 +46,39 @@ EXTRA_DIST += \
 %.user.defs.c: %.cli
 	rm -f $@
 	cp -p $< $@
-%.server.h %.server.c: lib_dep_tr_for_defs_a-%.server.defs.$(OBJEXT)
+%.server.h %.server.c %.server.msgids: lib_dep_tr_for_defs_a-%.server.defs.$(OBJEXT)
 	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMSFLAGS)	\
 	  -sheader $*.server.h -server $*.server.c	\
 	  -user /dev/null -header /dev/null		\
+	  -list $*.server.msgids			\
 	  < $<
-%.server.msgids: lib_dep_tr_for_defs_a-%.server.defs.$(OBJEXT)
-	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMSFLAGS)	\
-	  -n -list $@					\
-	  < $<
-%.user.h %.user.c: lib_dep_tr_for_defs_a-%.user.defs.$(OBJEXT)
+%.user.h %.user.c %.user.msgids: lib_dep_tr_for_defs_a-%.user.defs.$(OBJEXT)
 	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMUFLAGS)		\
 	  -user $*.user.c -server /dev/null -header $*.user.h	\
-	  < $<
-%.user.msgids: lib_dep_tr_for_defs_a-%.user.defs.$(OBJEXT)
-	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMUFLAGS)	\
-	  -n -list $@					\
+	  -list $*.user.msgids					\
 	  < $<
 
 # TODO.  Get rid of the .srv files and rather use .defs files and MIG*SFLAGS?
-%.server.defs: %.srv
-	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) -o $@ $<
-%.server.defs: %.defs
-	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) $(MIGSFLAGS) -o $@ $<
-%.server.h %.server.c: %.server.defs
-	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMSFLAGS)	\
-	  -sheader $*.server.h -server $*.server.c	\
-	  -user /dev/null -header /dev/null		\
-	  < $<
+#%.server.defs: %.srv
+#	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) -o $@ $<
+#%.server.defs: %.defs
+#	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) $(MIGSFLAGS) -o $@ $<
+#%.server.h %.server.c %.server.msgids: %.server.defs
+#	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMSFLAGS)	\
+#	  -sheader $*.server.h -server $*.server.c	\
+#	  -user /dev/null -header /dev/null		\
+#	  -list $*.server.msgids			\
+#	  < $<
 # TODO.  Get rid of the .cli files and rather use .defs files and MIG*UFLAGS?
-%.user.defs: %.cli
-	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) -o $@ $<
-%.user.defs: %.defs
-	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) $(MIGUFLAGS) -o $@ $<
-%.user.h %.user.c: %.user.defs
-	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMUFLAGS)		\
-	  -user $*.user.c -server /dev/null -header $*.user.h	\
-	  < $<
+#%.user.defs: %.cli
+#	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) -o $@ $<
+#%.user.defs: %.defs
+#	$(CPP) $(AM_CPPFLAGS) $(CPPFLAGS) $(MIGUFLAGS) -o $@ $<
+#%.user.h %.user.c %.user.msgids: %.user.defs
+#	$(MIGCOM) $(MIGCOMFLAGS) $(MIGCOMUFLAGS)		\
+#	  -user $*.user.c -server /dev/null -header $*.user.h	\
+#	  -list $*.user.msgids					\
+#	  < $<
 
 #
 # gzip files.
